 $Id: ChangeLog,v 1.131.2.25.2.71 2010/09/17 04:37:59 uehira Exp $

2010-09-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wadd2.c : 64 bit clean.
	* src/rtape.c : 64 bit clean.
	* rename MACROs
	  SWAPL --> SWAP32
	  SWAPS --> SWAP16
	  MKSWAPS --> MKSWAP16

2010-09-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wadd.c : 64 bit clean.
	* src/wed.c : 64 bit clean.
	* src/winadd.c : added a option (-m).
	  -m : only try memory mode.

2010-09-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winadd.c : added options (-f, -s).
	  -f : force file mode.
 	  -s : channel sort mode.

2010-09-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/ee_manager, prog/wincd : The $* variables has been removed
	  in perl 5.10.
	* [src][man*]/Makefile.am : uninstall symblic links.
	  uninstall-hook --> uninstall-local
	* Version 2.1.7 released.

2010-08-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/split_win.c : added.
	* Version 2.1.6 released.

2010-06-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/dewin.c : fixed bug.

2010-06-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c : Shm_init() : set max. remain size of shared memory.
	* Version 2.1.5 released.

2010-06-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use str2double() from library : win.c, elist.c
	  hypomhc : rename str2double() --> str2double_h()
	* src/win.c : 64bit clean?
	* Version 2.1.4 released.

2010-06-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : WIN_sr : uint32_w --> int32_w
	* src/winlib.h : added structure for binary hypo file : 'struct FinalB'
	  delete declaration in final2finalb.c, finalb2final.c,	finalb2seis.c,
	  pick2finalb.c, win.c.
	* src/win.c : use hypot().
	* Version 2.1.3 released.

2010-06-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/ulaw.[ch] : cvt.[ch] renamed.
	* src/win.c : ulaw() moved to 'ulaw.c'. use win2fix().

2010-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : fixed buffer overrun bug.
